<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="6dp"
    android:paddingTop="4dp"
    android:paddingEnd="6dp"
    android:paddingBottom="4dp">

    <ImageButton
        android:id="@+id/notif_rec_stop"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/notif_action_stop"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_menu_close_clear_cancel" />

    <ImageButton
        android:id="@+id/notif_rec_pause"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/notif_action_pause"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_media_pause" />

    <ImageButton
        android:id="@+id/notif_rec_mute"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/notif_action_mute"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_lock_silent_mode" />
</LinearLayout>
